[package]
name = "bess-rs"
version = "0.1.0"
authors = ["@eshikafe"]
description = "BESS implementation in Rust"
edition = "2021"

[[bin]]
name = "bessd"
path = "core/main.rs"

[dependencies]
libc = "0.2"
nix = {version = "0.24.2", features = ["user"]}

#include <glog/logging.h>`
log = "0.4.17"
env_logger = "0.9.0"

#include <gflags/gflags.h>`
clap = {version = "3.2.12", features = ["derive"]}
macaddr = "1.0.1"

[build-dependencies]
# time = "0.1"
build-data = "0.1.3"