[package]
name = "bess-rs"
version = "0.1.0"
authors = ["@eshikafe"]
description = "BESS implementation in Rust"
edition = "2021"

[workspace]
members = [
    "bessctl",
    "bessd",
    "bess-core",
    "bess-drivers",
    "bess-modules"
]

[dependencies]
libc = "0.2"
nix = {version = "0.24.2", features = ["user"]}

# #include <glog/logging.h>`
log = "0.4.17"
env_logger = "0.9.0"

# #include <gflags/gflags.h>`
clap = {version = "3.2.12", features = ["derive"]}
macaddr = "1.0.1"

# #gRPC
tonic = "0.8.1"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
# time = "0.1"
build-data = "0.1.3"
tonic-build = "0.7"