[package]
name = "bess-rs"
version = "0.1.0"
description = "BESS implementation in Rust"
edition = "2021"

[[bin]]
name = "bessd"
path = "src/bin/bessd.rs"

[lib]
name = "bess"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
nix = {version = "0.24.2", features = ["user"]}
exitcode = "1.1.2"
log = "0.4.17"
env_logger = "0.9.0"
clap = {version = "3.2.12", features = ["derive"]}
macaddr = "1.0.1"
tonic = "0.8.1"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.22"
lazy_static = "1.4.0"

[build-dependencies]
# time = "0.1"
build-data = "0.1.3"
tonic-build = "0.7"
glob = "0.3.0"